# keepers-vigil

./: .gitignore  CLAUDE.md  README.md  the-last-vigil-tech-spec.md
backend/: BENCHMARK_RESULTS.md  benchmark_performance.py  benchmark_results.json  main.py  pyproject.toml  run_tests.py
backend/api/: routes.py
backend/data/: __init__.py  conversations.py  objects.py  rooms.py
backend/engine/: __init__.py  actions.py  hints.py  state_store.py  validation.py
backend/llm/: __init__.py  client.py  intent.py  narrative.py  prompts.py
backend/models/: __init__.py  intent.py  requests.py  state.py
backend/test_sessions/chaotic_player_20260106_201117_5d928da0/: session.json  transcript.md
backend/test_sessions/chaotic_player_20260110_195000_68faf262/: session.json  transcript.md
backend/test_sessions/completionist_20260106_195900_599d4776/: session.json  transcript.md
backend/test_sessions/completionist_20260110_191653_a6a6933e/: session.json  transcript.md
backend/test_sessions/confused_user_20260106_194318_135283d9/: session.json  transcript.md
backend/test_sessions/confused_user_20260110_190810_ccccf79e/: session.json  transcript.md
backend/test_sessions/methodical_explorer_20260106_193957_30aa4d85/: session.json  transcript.md
backend/test_sessions/methodical_explorer_20260110_134221_79c11d9d/: session.json  transcript.md
backend/test_sessions/methodical_explorer_20260110_172546_9cb5916f/: session.json  transcript.md
backend/test_sessions/speedrunner_20260106_191650_018c3c6c/: session.json  (+1 more)
backend/testing/: __init__.py  config.py  runner.py
(+72 files in other folders)
